<resources>
    <string name="app_name">Yobbo</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_rate">Rate</string>
    <string name="action_settings" translatable="false">action_settings</string>
    <string name="country_name" translatable="false">country_name</string>
    <string name="pref_header_ui">UI</string>
    <string name="pref_header_other">Other</string>

    <string name="baranov">Artem Baranov</string>
    <string name="baranov_txt">Developer</string>
    <string name="kizim">Alena Kizim</string>
    <string name="kizim_txt">Author of the idea and design</string>

    <string name="list_title">Size text</string>
    <string name="list_summary">Text of Yobbo</string>
    <string name="vsmall">Very Small</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="vlarge">Very Large</string>
    <string-array name="entries">
        <item>Very Small</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Very Large</item>
    </string-array>

    <string name="save_location">%1$s/Yobbo/</string>
    <string name="send">Send to…</string>
    <string name="edit">Edit text</string>
    <string name="crop">Crop image</string>
    <string name="color_title">Color text</string>
    <string name="color_summary">Color of Yobbo</string>
    <string name="color_select">Click to select the color</string>
    <string name="text_select">Choose text size</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="dgreen">Dark Green</string>
    <string name="dblue">Dark Blue</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>
    <string name="brown">Brown</string>
    <string name="gray">Gray</string>
    <string-array name="entries_color">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string name="hello">HELLO</string>
    <string name="font_title">Font text</string>
    <string name="font_system">System font</string>
    <string name="font_summary">Font of Yobbo</string>
    <string name="irina" translatable="false">IRINA_C</string>
    <string name="roundblack" translatable="false">RoundsBlack</string>
    <string name="clg" translatable="false">a_SimplerClg</string>
    <string name="impact" translatable="false">impact</string>
    <string name="Intro_Inline" translatable="false">Intro Inline</string>
    <string name="noconnect">No connection</string>
    <string-array name="entries_font">
        <item>IRINA_C</item>
        <item>RoundsBlack</item>
        <item>a_SimplerClg</item>
        <item>impact</item>
        <item>Intro Inline</item>
        <item>System font</item>
    </string-array>

    <string name="pref_title_stroke">Stroke style</string>
    <string name="pref_summary_stroke">Enable border with text</string>

    <string name="pref_title_anim">Animation</string>
    <string name="pref_summary_anim">Enable IU animation</string>

    <string name="fo_fab">Click plus</string>
    <string name="fo_tool">Click send</string>

    <string name="input_dialog">Set text here</string>
    <string name="ok">OK</string>
    <string name="need_text">…</string>
    <string name="zero" translatable="false"> </string>
    <string name="googlep">\nGOOGLE+</string>

    <string name="dib">Dib Hlebushek</string>
    <string name="rr">Harry</string>
    <string name="pool">Deadpool</string>
    <string name="gar">Garfield</string>
    <string name="pusheen">Pusheen</string>
    <string name="be">Bear in the bushes</string>
    <string name="ars">Cat Arseniy</string>
    <string name="simon">Simon Cat</string>
    <string name="rage">Rage</string>
    <string name="animal">Animals</string>
    <string name="cut">Cut the Rope</string>
    <string name="hick">Chick</string>
    <string name="btn_next">Next</string>
    <string name="senya">Senya</string>
    <string name="manul">Manul</string>
    <string name="whoiam">Who I am today</string>
    <string name="roman">Roman life</string>
    <string name="cyan">Cyanide and Happiness</string>
    <string name="face">Facepalm</string>
    <string name="peppa">Peppa Pig</string>
    <string name="simp">Simpsons</string>
    <string name="futur">Futurama</string>
    <string name="pigeons">Pigeons</string>
    <string name="wow">Wow</string>
    <string name="wwf">WWF</string>
    <string name="gad">Despicable Me</string>
    <string name="goo">Goosy</string>
    <string name="har">Hide The Pain Harold</string>
    <string name="emo">Emotions</string>
    <string name="avc">Vast Country</string>
    <string name="boroda">Bearded Man</string>
    <string name="other">Other</string>
    <string name="open">Open</string>
    <string name="adv">Adventure Time</string>
    <string name="coy">Coyote</string>
    <string name="fox">Fox</string>
    <string name="pea">Cat Peach</string>
    <string name="fro">Frog Рере</string>
    <string name="smi">Smile</string>
    <string name="spa">SpongeBob</string>
    <string name="ice">Ice Age</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="help">Help</string>
    <string name="_0">0</string>
</resources>
