<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light"
            android:padding="@dimen/base_padding">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/layout_about1"
                    style="@style/ListsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:src="@drawable/b" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UnusedAttribute">

                        <TextView
                            android:id="@+id/about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/baranov"
                            android:textColor="@android:color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/aboutabout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/baranov_txt"
                            android:textColor="@color/dark"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/aboutgp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/googlep"
                            android:textColor="@color/accent"
                            android:textSize="17sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light"
            android:padding="@dimen/base_padding">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/layout_about2"
                    style="@style/ListsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:src="@drawable/k" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UnusedAttribute">

                        <TextView
                            android:id="@+id/about2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/kizim"
                            android:textColor="@android:color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/aboutabout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/kizim_txt"
                            android:textColor="@color/dark"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/aboutgp2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/googlep"
                            android:textColor="@color/accent"
                            android:textSize="17sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>